tests/expectations/compiler/function/program_core_functions_fail.out
Error [ETYC0372117]: Expected type `[u8; 31]` but type `[u8; 32]` was found.
    --> compiler-test:4:23
     |
   4 |     let d: [u8; 31] = Program::checksum(credits.aleo);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372119]: Received different types `[u8; 32]` and `[u8; 31]` for the operation `assert_neq`.
    --> compiler-test:5:5
     |
   5 |     assert_neq(c, d);
     |     ^^^^^^^^^^^^^^^^^
     |
     = Make both operands the same type.
Error [ETYC0372156]: `Program::edition` must be called on a program ID, e.g. `foo.aleo`
    --> compiler-test:7:35
     |
   7 |     let e: u16 = Program::edition(d);
     |                                   ^
Error [ETYC0372117]: Expected type `address` but type `[u8; 31]` was found.
    --> compiler-test:7:35
     |
   7 |     let e: u16 = Program::edition(d);
     |                                   ^
Error [ETYC0372117]: Expected type `u8` but type `u16` was found.
    --> compiler-test:8:17
     |
   8 |     let f: u8 = Program::edition(credits.aleo);
     |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372119]: Received different types `u16` and `u8` for the operation `assert_neq`.
    --> compiler-test:9:5
     |
   9 |     assert_neq(e, f);
     |     ^^^^^^^^^^^^^^^^^
     |
     = Make both operands the same type.
